--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="screenshot/11.png" alt="portfolio image"/>
+										<img src="screenshot/11.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												Brave website
@@ -722,7 +722,7 @@
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="screenshot/22.png" alt="portfolio image"/>
+										<img src="screenshot/22.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												Responsive website
@@ -733,7 +733,7 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="screenshot/33.png" alt="portfolio image"/>
+										<img src="screenshot/33.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												web design
@@ -744,7 +744,7 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="screenshot/44.png" alt="portfolio image"/>
+										<img src="screenshot/44.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												Portfolio Design
@@ -752,7 +752,7 @@
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="screenshot/55.png" alt="portfolio image"/>
+										<img src="screenshot/55.webp" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												web development
